// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutcomeSummaryBar render inverted badges 1`] = `
<div
  aria-label="42 Passed, 13 Failed, 7 Incomplete"
  className="outcome-summary-bar"
  data-automation-id="outcome-summary-bar"
  role="img"
>
  <div
    style={
      Object {
        "flexGrow": 42,
      }
    }
  >
    <span
      className="pass summary-bar-left-edge"
    >
      <span
        aria-hidden="true"
      >
        <CheckIconInverted />
      </span>
      42
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 13,
      }
    }
  >
    <span
      className="fail"
    >
      <span
        aria-hidden="true"
      >
        <CrossIconInverted />
      </span>
      13
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 7,
      }
    }
  >
    <span
      className="incomplete summary-bar-right-edge"
    >
      <span
        aria-hidden="true"
      >
        <CircleIcon />
      </span>
      7
    </span>
  </div>
</div>
`;

exports[`OutcomeSummaryBar show by count 1`] = `
<div
  aria-label="42 Passed, 13 Failed, 7 Incomplete"
  className="outcome-summary-bar"
  data-automation-id="outcome-summary-bar"
  role="img"
>
  <div
    style={
      Object {
        "flexGrow": 42,
      }
    }
  >
    <span
      className="pass summary-bar-left-edge"
    >
      <span
        aria-hidden="true"
      >
        <CheckIcon />
      </span>
      42
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 13,
      }
    }
  >
    <span
      className="fail"
    >
      <span
        aria-hidden="true"
      >
        <CrossIcon />
      </span>
      13
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 7,
      }
    }
  >
    <span
      className="incomplete summary-bar-right-edge"
    >
      <span
        aria-hidden="true"
      >
        <CircleIcon />
      </span>
      7
    </span>
  </div>
</div>
`;

exports[`OutcomeSummaryBar show by percentage 1`] = `
<div
  aria-label="42% Passed, 13% Failed, 7% Incomplete"
  className="outcome-summary-bar"
  data-automation-id="outcome-summary-bar"
  role="img"
>
  <div
    style={
      Object {
        "flexGrow": 42,
      }
    }
  >
    <span
      className="pass summary-bar-left-edge"
    >
      <span
        aria-hidden="true"
      >
        <CheckIcon />
      </span>
      42
      %
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 13,
      }
    }
  >
    <span
      className="fail"
    >
      <span
        aria-hidden="true"
      >
        <CrossIcon />
      </span>
      13
      %
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 7,
      }
    }
  >
    <span
      className="incomplete summary-bar-right-edge"
    >
      <span
        aria-hidden="true"
      >
        <CircleIcon />
      </span>
      7
      %
    </span>
  </div>
</div>
`;

exports[`OutcomeSummaryBar show with text label 1`] = `
<div
  aria-label="42 Passed, 13 Failed, 7 Incomplete"
  className="outcome-summary-bar"
  data-automation-id="outcome-summary-bar"
  role="img"
>
  <div
    style={
      Object {
        "flexGrow": 42,
      }
    }
  >
    <span
      className="pass summary-bar-left-edge"
    >
      <span
        aria-hidden="true"
      >
        <CheckIcon />
      </span>
      42
      <span
        className="label"
      >
         Passed
      </span>
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 13,
      }
    }
  >
    <span
      className="fail"
    >
      <span
        aria-hidden="true"
      >
        <CrossIcon />
      </span>
      13
      <span
        className="label"
      >
         Failed
      </span>
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 7,
      }
    }
  >
    <span
      className="incomplete summary-bar-right-edge"
    >
      <span
        aria-hidden="true"
      >
        <CircleIcon />
      </span>
      7
      <span
        className="label"
      >
         Incomplete
      </span>
    </span>
  </div>
</div>
`;
